--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: cesufood_app
 description: A new Flutter project.
 
 dependencies:
+  flutter_masked_text: ^0.4.0
   flutter:
     sdk: flutter
 
