--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,7 @@ description: A new Flutter project.
 
 dependencies:
   flutter_masked_text: ^0.4.0
+  cached_network_image: ^0.4.1
   flutter:
     sdk: flutter
 
