--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,7 @@ description: A new Flutter project.
 dependencies:
   flutter_masked_text: ^0.4.0
   cached_network_image: ^0.4.1
+  sqflite: any
   flutter:
     sdk: flutter
 
