--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: cesufood_app
 description: A new Flutter project.
 
 dependencies:
+  shared_preferences: any
   flutter_masked_text: ^0.4.0
   cached_network_image: ^0.4.1
   sqflite: any
